--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <main>
   <section class="hero-video" style="position: relative;">
     <video autoplay muted loop class="background-video">
-      <source src="portofolio.MOV" type="video/mp4">
+      <source src="portofolio.mp4" type="video/mp4">
     </video>
     <!-- LOGO DENTRO DO VÍDEO, CANTO SUPERIOR ESQUERDO, ABAIXO DO MENU -->
     <div style="position: absolute; top: 20px; left: 40px; z-index: 2;">
